--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,12 @@
         flex-wrap:nowrap;
         align-items: center ;
         justify-content:space-around;
+        flex-direction:row-reverse;
     }
 
     .keys {
         display:flex;
+        
         align-items: center;
         justify-content: center;
         font-size: large;
